# qcnn-vs-cnn-medical-imaging

./: .gitignore  README.md  config_resolved.yaml  extract_mmd.py  pyproject.toml  results.json  translate_mmd_es.py
conf/: config.yaml
conf/dataset/: brainstem.yaml  cifar10.yaml  fashion_mnist.yaml  mnist.yaml
conf/experiment/: exp1_baseline.yaml  exp2_param_efficiency.yaml  exp3_multiclass.yaml  exp4_noise_robustness.yaml  exp5_qubit_scaling.yaml  exp6_encoding_study.yaml  exp7_framework_comparison.yaml  exp_brainstem.yaml
conf/model/: acapulco_brainstem.yaml  cerebnet_brainstem.yaml  classical_cnn.yaml  classical_cnn_brainstem.yaml  classical_cnn_small.yaml  hybrid_qcnn.yaml  hybrid_qcnn_brainstem.yaml  marin_brainstem.yaml  mipaim_unet_brainstem.yaml  qcnn_pennylane.yaml  qcnn_pennylane_brainstem.yaml  qcnn_qiskit.yaml  qcnn_qiskit_brainstem.yaml  swin_unetr_brainstem.yaml
docs/: model_summary.md
paper/: fig_arch_es.tex  full_paper.tex  full_paper_es.tex  partial.tex  partial_es.tex  partial_es_docx.tex
paper/figures/: fig01.mmd  fig01_es.mmd  fig02.mmd  fig02_es.mmd  fig03.mmd  fig03_es.mmd  fig04.mmd  fig04_es.mmd  fig05.mmd  fig05_es.mmd  fig06.mmd  fig06_es.mmd  fig07.mmd  fig07_es.mmd  fig08.mmd  fig08_es.mmd  fig09.mmd  fig09_es.mmd  fig10.mmd  fig10_es.mmd  fig11.mmd  fig11_es.mmd  fig12.mmd  fig12_es.mmd  fig13.mmd  fig13_es.mmd  fig14.mmd  fig14_es.mmd
plan/: experiment_plan.md  project_explanation.md
run/: rerun_qcnn_2d_17M.sh  train_all.sh
run/pipeline/: aggregate_results.py  compare.py  eval_fullvol_2d.py  eval_per_subject.py  train.py  (+7 more)
(+39 files in other folders)
