[project]
name = "quant-cnn"
version = "0.1.0"
description = "Benchmarking Quantum Convolutional Neural Networks against Classical CNNs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Robin" }]
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pennylane>=0.42.0",
    "pennylane-lightning>=0.42.0",
    "qiskit>=1.0.0",
    "qiskit-machine-learning>=0.8.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "nibabel>=5.0.0",
    "monai[einops]>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "run"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
